--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,13 @@
-baseURL = "http://theodiablo-travel-blog.s3-website.eu-central-1.amazonaws.com"
+baseURL = "https://www.traveling-bubbles.com/"
 languageCode = "en-us"
-title = "My New Hugo Site"
-theme = "hugo-tranquilpeak-theme"
+title = "Traveling bubbles!"
+theme = "hugo_theme_robust"
+author = "Theodiablo"
+copyright = "Copyright (c) 2017, Theodiablo; all rights reserved."
+canonifyurls = true
+paginate = 3
+
+
+[params]
+  disqusShortname = "travel-bubbles" # optional
+  googleAnalyticsUserID = "UA-100203771-1"
