--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,8 @@ cache:
   directories:
   - $HOME/gopath/src/github.com/
   - $HOME/gopath/src/golang.org/
-  
+  - $HOME/gopath/src/gopkg.in/
+
 install: go get -v github.com/spf13/hugo
 script:
   - hugo
