--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,8 @@
 baseURL = "https://www.traveling-bubbles.com/"
 languageCode = "en-us"
+defaultContentLanguage = "en-us"
 title = "Traveling bubbles!"
-theme = "hugo_theme_robust"
+theme = "hugo-tranquilpeak-theme"
 author = "Theodiablo"
 copyright = "Copyright (c) 2017, Theodiablo; all rights reserved."
 canonifyurls = true
@@ -11,3 +12,76 @@ paginate = 3
 [params]
   disqusShortname = "travel-bubbles" # optional
   googleAnalyticsUserID = "UA-100203771-1"
+  dateFormat = "2 January 2006"
+  keywords = ["travel", "sightseeing", "backpacker"]
+  sidebarBehavior = 1
+  thumbnailImage = true
+  thumbnailImagePosition = "right"
+  autoThumbnailImage = true
+  coverImage = "Floating-Bubbles-small.jpg"
+  favicon = "favicon.png"
+  imageGallery = true
+  hierarchicalCategories = true
+
+[[menu.main]]
+  weight = 0
+  identifier = "home"
+  name = "Home"
+  pre = "<i class=\"sidebar-button-icon fa fa-lg fa-home\"></i>"
+  url = "/"
+[[menu.main]]
+  weight = 1
+  identifier = "categories"
+  name = "Categories"
+  pre = "<i class=\"sidebar-button-icon fa fa-lg fa-bookmark\"></i>"
+  url = "/categories"
+[[menu.main]]
+  weight = 2
+  identifier = "tags"
+  name = "Tags"
+  pre = "<i class=\"sidebar-button-icon fa fa-lg fa-tags\"></i>"
+  url = "/tags"
+[[menu.main]]
+  weight = 3
+  identifier = "archives"
+  name = "Archives"
+  pre = "<i class=\"sidebar-button-icon fa fa-lg fa-archive\"></i>"
+  url = "/archives"
+[[menu.main]]
+  weight = 4
+  identifier = "search"
+  name = "Search"
+  pre = "<i class=\"sidebar-button-icon fa fa-lg fa-search\"></i>"
+  url = "/#search"
+  class = "st-search-show-outputs"
+[[menu.main]]
+  weight = 4
+  identifier = "about"
+  name = "About"
+  pre = "<i class=\"sidebar-button-icon fa fa-lg fa-question\"></i>"
+  url = "/#about"
+
+[[menu.links]]
+  weight = 0
+  identifier = "github"
+  name = "GitHub"
+  pre = "<i class=\"sidebar-button-icon fa fa-lg fa-github\"></i>"
+  url = "https://github.com/kakawait"
+[[menu.links]]
+  weight = 1
+  identifier = "stackoverflow"
+  name = "Stack Overflow"
+  pre = "<i class=\"sidebar-button-icon fa fa-lg fa-stack-overflow\"></i>"
+  url = "https://stackoverflow.com/users/636472/kakawait"
+
+[[menu.misc]]
+  weight = 0
+  identifier = "rss"
+  name = "RSS"
+  pre = "<i class=\"sidebar-button-icon fa fa-lg fa-rss\"></i>"
+  url = "/index.xml"
+
+ [params.header.rightLink]
+  class = "open-algolia-search"
+  icon = "search"
+  url = "/#search"
