--- a/config.toml
+++ b/config.toml
@@ -2,7 +2,7 @@ baseURL = "https://www.traveling-bubbles.com/"
 languageCode = "en-us"
 defaultContentLanguage = "en-us"
 title = "Traveling bubbles!"
-theme = "hugo-tranquilpeak-theme"
+theme = "hugo_theme_robusts"
 author = "Theodiablo"
 copyright = "Copyright (c) 2017, Theodiablo; all rights reserved."
 canonifyurls = true
@@ -23,45 +23,45 @@ paginate = 3
   imageGallery = true
   hierarchicalCategories = true
 
-[[menu.main]]
-  weight = 0
-  identifier = "home"
-  name = "Home"
-  pre = "<i class=\"sidebar-button-icon fa fa-lg fa-home\"></i>"
-  url = "/"
-[[menu.main]]
-  weight = 1
-  identifier = "categories"
-  name = "Categories"
-  pre = "<i class=\"sidebar-button-icon fa fa-lg fa-bookmark\"></i>"
-  url = "/categories"
-[[menu.main]]
-  weight = 2
-  identifier = "tags"
-  name = "Tags"
-  pre = "<i class=\"sidebar-button-icon fa fa-lg fa-tags\"></i>"
-  url = "/tags"
-[[menu.main]]
-  weight = 3
-  identifier = "archives"
-  name = "Archives"
-  pre = "<i class=\"sidebar-button-icon fa fa-lg fa-archive\"></i>"
-  url = "/archives"
-[[menu.main]]
-  weight = 4
-  identifier = "search"
-  name = "Search"
-  pre = "<i class=\"sidebar-button-icon fa fa-lg fa-search\"></i>"
-  url = "/#search"
-  class = "st-search-show-outputs"
-[[menu.main]]
-  weight = 4
-  identifier = "about"
-  name = "About"
-  pre = "<i class=\"sidebar-button-icon fa fa-lg fa-question\"></i>"
-  url = "/#about"
+#[[menu.main]]
+#  weight = 0
+#  identifier = "home"
+#  name = "Home"
+#  pre = "<i class=\"sidebar-button-icon fa fa-lg fa-home\"></i>"
+#  url = "/"
+#[[menu.main]]
+#  weight = 1
+#  identifier = "categories"
+#  name = "Categories"
+#  pre = "<i class=\"sidebar-button-icon fa fa-lg fa-bookmark\"></i>"
+#  url = "/categories"
+#[[menu.main]]
+#  weight = 2
+#  identifier = "tags"
+#  name = "Tags"
+#  pre = "<i class=\"sidebar-button-icon fa fa-lg fa-tags\"></i>"
+#  url = "/tags"
+#[[menu.main]]
+#  weight = 3
+#  identifier = "archives"
+#  name = "Archives"
+#  pre = "<i class=\"sidebar-button-icon fa fa-lg fa-archive\"></i>"
+#  url = "/archives"
+#[[menu.main]]
+#  weight = 4
+#  identifier = "search"
+#  name = "Search"
+#  pre = "<i class=\"sidebar-button-icon fa fa-lg fa-search\"></i>"
+#  url = "/#search"
+#  class = "st-search-show-outputs"
+#[[menu.main]]
+#  weight = 4
+#  identifier = "about"
+#  name = "About"
+#  pre = "<i class=\"sidebar-button-icon fa fa-lg fa-question\"></i>"
+#  url = "/#about"
 
- [params.header.rightLink]
-  class = "open-algolia-search"
-  icon = "search"
-  url = "/#search"
+# [params.header.rightLink]
+#  class = "open-algolia-search"
+#  icon = "search"
+#  url = "/#search"
