--- a/config.toml
+++ b/config.toml
@@ -2,7 +2,7 @@ baseURL = "https://www.traveling-bubbles.com/"
 languageCode = "en-us"
 defaultContentLanguage = "en-us"
 title = "Traveling bubbles!"
-theme = "hugo_theme_robusts"
+theme = "hugo_theme_robust"
 author = "Theodiablo"
 copyright = "Copyright (c) 2017, Theodiablo; all rights reserved."
 canonifyurls = true
