Remove test articles and switch default language to Spanish instead of english

--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 baseURL = "https://traveling-bubbles.com/"
-defaultContentLanguage = "en"
+defaultContentLanguage = "es"
 title = "Traveling bubbles!"
 theme = "hugo_robust"
 copyright = "Copyright (c) 2017, Theodiablo. All rights reserved."
