--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ script:
 after_success:
   - python --version
   - sudo pip install s3cmd
-  - s3cmd sync --delete-removed --check-md5 -P -M -r public/* s3://theodiablo-travel-blog/
+  - s3cmd sync --delete-removed --check-md5 -P --no-mime-magic --guess-mime-type -r public/* s3://theodiablo-travel-blog/
 notifications:
     email:
         on_failure: always
