--- a/config.toml
+++ b/config.toml
@@ -7,6 +7,7 @@ canonifyurls = true
 paginate = 4
 googleAnalytics = "UA-100203771-1"
 disqusShortname = "travel-bubbles"
+enableRobotsTXT = true
 
 
 [author]
