--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   },
   "devDependencies": {
     "gulp-load-plugins": "^1.5.0",
-    "node-gyp": "^3.6.2"
+    "gulp-responsive": "^2.9.0",
+    "node-gyp": "^3.6.2",
+    "run-sequence": "^2.2.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
