--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "gulp": "^4.0.0"
   },
   "devDependencies": {
+    "gulp-concat": "^2.6.1",
+    "gulp-html-replace": "^1.6.2",
     "gulp-load-plugins": "^1.5.0",
     "gulp-newer": "^1.4.0",
     "gulp-responsive": "^2.9.0",
+    "gulp-uglify": "^3.0.0",
     "node-gyp": "^3.6.2",
     "run-sequence": "^2.2.1"
   },
